force-app/main/default/objects/Promo_Grid_Product_Weight__c/Promo_Grid_Product_Weight__c.object-meta.xml
<CustomObject>
    <description>Product weight allocation for a Line territory Promo Grid. Weights should total 100% per Line.</description>
    <label>Promo Grid Product Weight</label>
    <nameField>
        <displayFormat>PGPW-{00000}</displayFormat>
        <label>Product Weight Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promo Grid Product Weights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>