force-app/main/default/objects/Promo_Grid_Product_Weight__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Product included in this Line Promo Grid weight allocation.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Promo Grid Product Weights</relationshipLabel>
    <relationshipName>Promo_Grid_Product_Weights</relationshipName>
    <type>Lookup</type>
</CustomField>