force-app/main/default/objects/Promo_Grid_Product_Weight__c/fields/Territory2_Id__c.field-meta.xml
<CustomField>
    <fullName>Territory2_Id__c</fullName>
    <description>Line Territory2 record Id (18 characters). Salesforce does not support custom lookups to Territory2.</description>
    <inlineHelpText>Line territory Id for this product weight row.</inlineHelpText>
    <label>Territory</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>