force-app/main/default/objects/Promo_Grid_Product_Weight__c/fields/Weight_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Weight_Percentage__c</fullName>
    <description>Share of promotional focus for this product within the Line. All product weights for a Line should total 100%.</description>
    <inlineHelpText>Percentage weight for this product (all products on the Line should sum to 100%).</inlineHelpText>
    <label>Weight Percentage</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>